tests/type-check/bad/test-refinement.arr
fun func() -> Number:
  0
where:
  func() is%({(x :: Number): false}) 0
end